[gd_scene load_steps=10 format=3 uid="uid://v17mowi5c1ui"]

[ext_resource type="Script" path="res://Area2D.gd" id="1_4052s"]
[ext_resource type="Texture2D" uid="uid://dfa4ia3jmpnl1" path="res://lever.png" id="2_ypk0t"]
[ext_resource type="Texture2D" uid="uid://cw7hyu5yni8o5" path="res://gear.png" id="4_icj1k"]
[ext_resource type="Script" path="res://CollisionPolygon2D.gd" id="4_vaopn"]
[ext_resource type="FontFile" uid="uid://br36wwv5wc2fi" path="res://fonts/SHPinscher-Regular.otf" id="6_s738y"]
[ext_resource type="Script" path="res://motor.gd" id="6_x6rlm"]
[ext_resource type="Script" path="res://Label.gd" id="7_2gxbn"]
[ext_resource type="AudioStream" uid="uid://rmt8bpycysi3" path="res://lever_sound.mp3" id="8_gl07a"]

[sub_resource type="GDScript" id="GDScript_q26f5"]
script/source = "extends Sprite2D

"

[node name="Node2D" type="Node2D"]
position = Vector2(665, 249)

[node name="Area2D" type="Area2D" parent="."]
position = Vector2(-121, -71)
script = ExtResource("1_4052s")

[node name="lever" type="Sprite2D" parent="Area2D"]
position = Vector2(79, 73)
rotation = -0.674289
texture = ExtResource("2_ypk0t")
offset = Vector2(0, -50)
script = SubResource("GDScript_q26f5")

[node name="lock_timer" type="Timer" parent="Area2D"]
wait_time = 3.0

[node name="lever_timer" type="Timer" parent="Area2D"]
wait_time = 2.0
one_shot = true

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Area2D"]
position = Vector2(50.3173, 48.8479)
rotation = -0.680158
polygon = PackedVector2Array(1, -26, -10, -36, -12, -50, -6, -60, 6, -65, 16, -62, 24, -55, 26, -44, 22, -33, 11, -26, 10, 37, 1, 36)
script = ExtResource("4_vaopn")

[node name="motor" type="Sprite2D" parent="Area2D"]
position = Vector2(63, -5)
scale = Vector2(0.735, 0.735)
texture = ExtResource("4_icj1k")
centered = false
script = ExtResource("6_x6rlm")

[node name="cash_Label" type="Label" parent="Area2D"]
offset_left = 69.0
offset_top = -112.0
offset_right = 215.0
offset_bottom = -19.0
theme_override_fonts/font = ExtResource("6_s738y")
theme_override_font_sizes/font_size = 60
autowrap_mode = 3
script = ExtResource("7_2gxbn")

[node name="label_timer" type="Timer" parent="Area2D/cash_Label"]
wait_time = 5.0

[node name="lever_sound" type="AudioStreamPlayer2D" parent="Area2D"]
position = Vector2(119, 73)
stream = ExtResource("8_gl07a")

[connection signal="pull" from="Area2D" to="Area2D" method="_on_pull"]
[connection signal="timeout" from="Area2D/lock_timer" to="Area2D" method="_on_lock_timer_timeout"]
[connection signal="timeout" from="Area2D/lever_timer" to="Area2D" method="_on_lever_timer_timeout"]
[connection signal="timeout" from="Area2D/cash_Label/label_timer" to="Area2D/cash_Label" method="_on_label_timer_timeout"]
